# flowgraph

./: .env.example  .gitignore  CLAUDE.md  CONTEXT-MANAGEMENT-MVP.md  DEMO-STATE-MACHINE.md  EXECUTION-ENGINE-EXAMPLE.md  EXECUTION-ENGINE-PLAN.md  SPEC.md  TODO-PHASE1.md  WORKFLOW-EXECUTION-ENGINE-PLAN.md  docker-compose.yml  semantic-view-templates-spec.md
backend/: Dockerfile  pyproject.toml
backend/.claude/skills/docx/: SKILL.md
backend/.claude/skills/dynamodb/: SKILL.md
backend/.claude/skills/google-drive/: SKILL.md
backend/.claude/skills/notion/: SKILL.md
backend/.claude/skills/pdf/: SKILL.md
backend/app/: __init__.py  main.py
backend/app/api/: chat.py  connectors.py  endpoints.py  execute.py  files.py  references.py  tasks.py  templates.py  workflows.py
backend/app/connectors/: __init__.py  base.py  notion.py
backend/app/db/: __init__.py  connector_store.py  database.py  graph_store.py  secrets.py
backend/app/llm/: __init__.py  client.py  context_gatherer.py  context_selector_parser.py  data_generator.py  field_suggestion_generator.py  file_schema_generator.py  file_seeder.py  gemini_client.py  node_suggestion_generator.py  rule_generator.py  scenario_generator.py  schema_generator.py  view_generator.py
backend/app/models/: __init__.py  connector.py  connector_learning.py  context_pack.py  context_selector.py  edge.py  endpoint.py  event.py  external_reference.py  match.py  node.py  suggestion.py  task.py  workflow.py
backend/app/rules/: __init__.py  engine.py
backend/app/services/: __init__.py  delta_applicator.py  endpoint_executor.py  filter_evaluator.py  node_matcher.py  node_reference_resolver.py  task_progress.py
backend/app/storage/: __init__.py  upload_store.py
backend/flowgraph_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: gdrive_auth.py  seed_sales_workflow.py
backend/templates/: capa.workflow.json  closed-loop.workflow.json  document-approval.workflow.json  equipment-maintenance.workflow.json  materials-rnd.workflow.json  ml-lifecycle.workflow.json  sequencing.workflow.json  slack-links.workflow.json
backend/tests/: conftest.py  test_connectors.py  test_context_packs.py  test_external_references.py
backend/tests/test_api/: test_health.py
backend/tests/test_services/: test_node_matcher.py
scripts/: dc
(+215 files in other folders)
