[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "flowgraph-backend"
version = "0.1.0"
description = "Workflow Graph Studio - FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "anthropic>=0.40.0",
    "python-multipart>=0.0.17",
    "google-genai[aiohttp]>=1.0.0",
    "claude-agent-sdk>=0.1.20",
    # Notion and Google Drive integration
    "notion-client>=2.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    # Document handling
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "python-docx>=1.1.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a8",
    "black>=24.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py312"]
